<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">


            <TextView
                android:id="@+id/product_id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_product_id"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/default_product_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/product_id_txt"
                app:layout_constraintTop_toTopOf="@+id/product_id_txt" />

            <TextView
                android:id="@+id/product_description_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_product_description"
                app:layout_constraintStart_toStartOf="@+id/product_name_txt"
                app:layout_constraintTop_toBottomOf="@+id/product_name_txt" />

            <TextView
                android:id="@+id/product_price_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_product_price"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_collection_information_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_product_collection_information"
                app:layout_constraintEnd_toEndOf="@+id/product_price_txt"
                app:layout_constraintTop_toBottomOf="@+id/product_price_txt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>